--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,29 @@
+/*===== VARIABLES CSS =====*/
+/*===== Colores =====*/
 :root {
-    --main-color: #5a76fd
+    --main-color: #5a76fd;
+}
+
+/*===== Fonts Typography =====*/
+:root {
+    --body-font: calibri, sans-serif;
 }
 
 /*===== BASE =====*/
+*,
+::before,
+::after {
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     margin: 0px;
     padding: 0px;
-    font-family: calibri, sans-serif;
-}
-
-* {
-    box-sizing: border-box;
+    font-family: var(--body-font);
 }
 
 ul {
@@ -22,8 +34,8 @@ a {
     text-decoration: none;
 }
 
+/*===== LAYOUT =====*/
 /*===== Main =====*/
-
 .main {
     width: 100%;
     height: 100vh;
@@ -38,7 +50,6 @@ a {
 }
 
 /*===== NAV =====*/
-
 .nav {
     display: flex;
     align-items: center;
@@ -65,7 +76,7 @@ a {
     margin: 8px;
     padding: 0px 22px;
     display: flex;
-    font-size: 0.9rem;
+    font-size: .9rem;
     text-transform: uppercase;
     font-weight: 400;
     color: #111;
@@ -76,11 +87,10 @@ a {
     background-color: var(--main-color);
     color: #fff;
     box-shadow: 5px 10px 30px rgba(90, 118, 253, 0.5);
-    transition: all ease 0.2s;
+    transition: all ease .2s;
 }
 
 /*===== Home Content =====*/
-
 .home-content {
     display: flex;
     justify-content: space-around;
@@ -137,11 +147,10 @@ a {
 
 .main-login:hover {
     background-color: #5a62fd;
-    transition: all ease 0.3s;
+    transition: all ease .3s;
 }
 
-/*===== Timing =====*/
-
+/*Timing*/
 .timing {
     position: absolute;
     left: 20%;
@@ -177,7 +186,7 @@ a {
     font-weight: 700;
 }
 
-/*===== Arrow =====*/
+/*Arrow*/
 .arrow {
     align-self: end;
     width: 50%;
@@ -212,7 +221,7 @@ a {
 @keyframes arrow-animation {
     0% {
         bottom: 70px;
-        opacity: 0.2;
+        opacity: .2;
     }
 
     100% {
@@ -252,7 +261,7 @@ a {
     width: 50%;
 }
 
-/*===== BOX-CONTAINER =====*/
+/*===== BOXES =====*/
 .box-container {
     display: flex;
     justify-content: center;
@@ -311,7 +320,7 @@ a {
     margin: auto;
     border-radius: 5px;
     font-weight: 600;
-    font-size: 0.9rem;
+    font-size: .9rem;
     color: var(--main-color);
     margin: 0px;
 }
@@ -320,12 +329,10 @@ a {
     background-color: var(--main-color);
     color: #fff;
     box-shadow: 5px 10px 30px rgba(90, 118, 253, 0.5);
-    transition: all ease 0.3s;
+    transition: all ease .3s;
 }
 
 /*===== FOOTER =====*/
-
-
 .footer {
     width: 100%;
     display: flex;
@@ -344,8 +351,7 @@ a {
     display: none;
 }
 
-/*===== MEDIA QUERRIES =====*/
-
+/* ===== MEDIA QUERIES=====*/
 @media (max-width:1100px) {
     .nav {
         justify-content: space-between;
@@ -389,7 +395,7 @@ a {
         display: block;
         height: 2px;
         position: relative;
-        transition: background 0.2s ease-out;
+        transition: background .2s ease-out;
         width: 18px;
     }
 
@@ -400,7 +406,7 @@ a {
         display: block;
         height: 100%;
         position: absolute;
-        transition: all ease-out 0.2s;
+        transition: all ease-out .2s;
         width: 100%;
     }
 
@@ -508,7 +514,7 @@ a {
 
     .office-time p,
     .office-number p {
-        font-size: 0.8rem;
+        font-size: .8rem;
     }
 
     .arrow,
@@ -557,7 +563,7 @@ a {
 
     .footer p,
     a {
-        font-size: 0.9rem;
+        font-size: .9rem;
         text-align: center;
     }
 
